--- a/.gitignore
+++ b/.gitignore
@@ -5953,3 +5953,33 @@ node_modules/gulp/node_modules/vinyl-fs/node_modules/vinyl/node_modules/clone/te
 node_modules/gulp/node_modules/vinyl-fs/node_modules/vinyl/package.json
 node_modules/gulp/node_modules/vinyl-fs/package.json
 node_modules/gulp/package.json
+Web.UI/bin/Data/AnalyzeFamilySearchDO.cs
+Web.UI/bin/Data/AncestorsDO.cs
+Web.UI/bin/Data/DateDO.cs
+Web.UI/bin/Data/DateInputDO.cs
+Web.UI/bin/Data/DescendantsDO.cs
+Web.UI/bin/Data/FamilyDO.cs
+Web.UI/bin/Data/FamilyTreeDO.cs
+Web.UI/bin/Data/FindCluesInputDO.cs
+Web.UI/bin/Data/FindDO.cs
+Web.UI/bin/Data/HintDO.cs
+Web.UI/bin/Data/HintEntryDO.cs
+Web.UI/bin/Data/HintInputDO.cs
+Web.UI/bin/Data/IncompleteOrdinanceDO.cs
+Web.UI/bin/Data/ListItemsDO.cs
+Web.UI/bin/Data/LoginDO.cs
+Web.UI/bin/Data/OrdinanceDO.cs
+Web.UI/bin/Data/PersonDO.cs
+Web.UI/bin/Data/PersonsDO.cs
+Web.UI/bin/Data/PlaceInputDO.cs
+Web.UI/bin/Data/PossibleDuplicateDO.cs
+Web.UI/bin/Data/PossibleDuplicateEntryDO.cs
+Web.UI/bin/Data/PossibleDuplicateInputDO.cs
+Web.UI/bin/Data/ProblemInfoDO.cs
+Web.UI/bin/Data/ResearchDO.cs
+Web.UI/bin/Data/RetrieveFamilySearchDO.cs
+Web.UI/bin/Data/SessionDO.cs
+Web.UI/bin/Data/StartingPointDO.cs
+Web.UI/bin/Data/StartingPointInputDO.cs
+Web.UI/bin/Data/SummaryDO.cs
+Web.UI/bin/Data/ValidationDO.cs
