Adding more missing dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -5984,3 +5984,5 @@ Web.UI/bin/Data/StartingPointInputDO.cs
 Web.UI/bin/Data/SummaryDO.cs
 Web.UI/bin/Data/ValidationDO.cs
 Web.UI/log.txt
+Web.Core/obj/Debug/build.force
+Web.UI/obj/Debug/build.force
