--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -156,6 +156,7 @@
     <Content Include="Content\css\research-sprite.css" />
     <Content Include="Content\css\research.png" />
     <Content Include="Content\css\style.css" />
+    <Content Include="Content\css\transparent.png" />
     <Content Include="Content\css\vendor\formValidation.css" />
     <Content Include="Content\css\vendor\formValidation.min.css" />
     <Content Include="Content\css\vendor\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -404,6 +405,7 @@
     <Content Include="Content\js\views\Research\findPersonController.js" />
     <Content Include="Content\js\views\Research\researchController.js" />
     <Content Include="Content\js\views\Research\possibleDupliates.js" />
+    <Content Include="Content\js\views\Research\Hints.js" />
     <Content Include="Content\js\views\Research\startingPointEvents.js" />
     <Content Include="Content\js\lib\constants.js" />
     <Content Include="Content\js\views\Research\research.js" />
@@ -456,7 +458,7 @@
     <Content Include="Content\js\views\Research\DateProblemsReport.js" />
     <Content Include="Content\js\views\Research\FindClues.js" />
     <Content Include="Content\js\views\Research\FindCluesReport.js" />
-    <Content Include="Content\js\views\Research\Hints.js" />
+    <Content Include="Content\js\views\Research\Hints1.js" />
     <Content Include="Content\js\views\Research\HintsReport.js" />
     <Content Include="Content\js\views\Research\IncompleteOrdinances.js" />
     <Content Include="Content\js\views\Research\IncompleteOrdinancesReport.js" />
