--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -397,16 +397,18 @@
     <Content Include="Content\js\vendor\spin.min.js" />
     <Content Include="Content\js\vendor\string.js" />
     <Content Include="Content\js\vendor\string.min.js" />
+    <Content Include="Content\js\views\Research\researchHelper.js" />
     <Content Include="Content\js\views\Research\findPersonOptionsController.js" />
     <Content Include="Content\js\views\Research\findPersonOptions.js" />
     <Content Include="Content\js\views\Research\findPerson.js" />
     <Content Include="Content\js\views\Research\findPersonHelper.js" />
     <Content Include="Content\js\views\Research\findPersonController.js" />
     <Content Include="Content\js\views\Research\researchController.js" />
-    <Content Include="Content\js\views\Research\possibleDupliates.js" />
+    <Content Include="Content\js\views\Research\possibleDuplicates.js" />
     <Content Include="Content\js\views\Research\startingPointEvents.js" />
     <Content Include="Content\js\lib\constants.js" />
     <Content Include="Content\js\views\Research\research.js" />
+    <Content Include="Content\js\views\Research\startingPointReportController.js" />
     <Content Include="Content\js\views\shared\_layoutController.js" />
     <Content Include="Content\js\views\shared\person.js" />
     <Content Include="Content\js\views\Research\retrieve.js" />
@@ -463,7 +465,7 @@
     <Content Include="Content\js\views\Research\PersonUrlOptions.js" />
     <Content Include="Content\js\views\Research\PlaceProblems.js" />
     <Content Include="Content\js\views\Research\PlaceProblemsReport.js" />
-    <Content Include="Content\js\views\Research\PossibleDuplicates1.js" />
+    <Content Include="Content\js\views\Research\possibleDuplicatesController.js" />
     <Content Include="Content\js\views\Research\PossibleDuplicatesReport.js" />
     <Content Include="Content\js\views\Research\ResearchFamily.js" />
     <Content Include="Content\js\views\Research\retrieveController.js" />
