More changes and fixes to starting point, findperson, and retrieve

--- a/.gitignore
+++ b/.gitignore
@@ -5993,3 +5993,11 @@ Web.UI/Content/js/lib/constants.js.orig
 Web.UI/Content/js/main.js.orig
 Web.UI/Views/Research/FindPerson.cshtml.orig
 Web.UI/Web.UI.csproj.orig
+Web.UI/bin/Temp/L62L-S6D_PersonWithParents.bin
+Web.UI/bin/Temp/_201507181555_Persons.bin
+Web.UI/bin/Temp/_201507181556_Persons.bin
+Web.UI/bin/Temp/_201507181607_Persons.bin
+Web.UI/bin/Temp/_201507181610_Persons.bin
+Web.UI/bin/Temp/_201507181620_Persons.bin
+Web.UI/bin/Temp/_201507181641_Persons.bin
+Web.UI/bin/Temp/_201507181905_Persons.bin
