finishing up retrieve - still more changes to come though

--- a/.gitignore
+++ b/.gitignore
@@ -7151,3 +7151,5 @@ resources/ProgressError.ico
 resources/ProgressSkip.ico
 resources/ProgressSuccess.ico
 resources/ProgressWarn.ico
+Web.UI/hostingstart.html
+Web.UI/bin/Temp/_201507210848_Persons.bin
