--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -400,6 +400,9 @@
     <Content Include="Content\js\vendor\string.min.js" />
     <Content Include="Content\js\views\Research\dateProblemsController.js" />
     <Content Include="Content\js\views\Research\incompleteOrdinancesController.js" />
+    <Content Include="Content\js\views\Research\personUrlOptionsController.js" />
+    <Content Include="Content\js\views\Research\personUrls.js" />
+    <Content Include="Content\js\views\Research\personUrlsController.js" />
     <Content Include="Content\js\views\Research\researchHelper.js" />
     <Content Include="Content\js\views\Research\findPersonOptionsController.js" />
     <Content Include="Content\js\views\Research\findPersonOptions.js" />
