--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -412,9 +412,13 @@
     <Content Include="Content\js\views\Research\researchController.js" />
     <Content Include="Content\js\views\Research\possibleDuplicates.js" />
     <Content Include="Content\js\views\Research\Hints.js" />
+    <Content Include="Content\js\views\Research\findClues.js" />
+    <Content Include="Content\js\views\Research\findCluesController.js" />
     <Content Include="Content\js\views\Research\startingPointEvents.js" />
     <Content Include="Content\js\lib\constants.js" />
     <Content Include="Content\js\views\Research\research.js" />
+    <Content Include="Content\js\views\Research\findCluesReport.js" />
+    <Content Include="Content\js\views\Research\findCluesReportController.js" />
     <Content Include="Content\js\views\Research\startingPointReportController.js" />
     <Content Include="Content\js\views\shared\_layoutController.js" />
     <Content Include="Content\js\views\shared\person.js" />
@@ -463,13 +467,13 @@
     <Content Include="Content\js\views\home\indexController.js" />
     <Content Include="Content\js\views\Research\dateProblems.js" />
     <Content Include="Content\js\views\Research\DateProblemsReport.js" />
-    <Content Include="Content\js\views\Research\FindClues.js" />
-    <Content Include="Content\js\views\Research\FindCluesReport.js" />
+    <Content Include="Content\js\views\Research\FindClues1.js" />
+    <Content Include="Content\js\views\Research\FindCluesReport1.js" />
     <Content Include="Content\js\views\Research\hintsController.js" />
     <Content Include="Content\js\views\Research\HintsReport.js" />
     <Content Include="Content\js\views\Research\incompleteOrdinances.js" />
     <Content Include="Content\js\views\Research\IncompleteOrdinancesReport.js" />
-    <Content Include="Content\js\views\Research\PersonUrlOptions.js" />
+    <Content Include="Content\js\views\Research\personUrlOptions.js" />
     <Content Include="Content\js\views\Research\PlaceProblems.js" />
     <Content Include="Content\js\views\Research\PlaceProblemsReport.js" />
     <Content Include="Content\js\views\Research\possibleDuplicatesController.js" />
