More changes with find clues dialog

--- a/.gitignore
+++ b/.gitignore
@@ -7153,3 +7153,11 @@ resources/ProgressSuccess.ico
 resources/ProgressWarn.ico
 Web.UI/hostingstart.html
 Web.UI/bin/Temp/_201507210848_Persons.bin
+Web.UI/bin/Temp/L62L-S6D_201507220626_Persons.bin
+Web.UI/bin/Temp/L62L-S6D_201507220636_Persons.bin
+Web.UI/bin/Temp/L62L-S6D_201507220638_Persons.bin
+Web.UI/bin/Temp/L62L-S6D_201507220641_Persons.bin
+Web.UI/bin/Temp/L62L-S6D_201507220644_Persons.bin
+Web.UI/bin/Temp/_201507220659_Persons.bin
+Web.UI/Content/js/views/Research/FindClues1.js
+Web.UI/Content/js/views/Research/FindCluesReport1.js
