making the dialogs work and minor ui changes

--- a/.gitignore
+++ b/.gitignore
@@ -7161,3 +7161,5 @@ Web.UI/bin/Temp/L62L-S6D_201507220644_Persons.bin
 Web.UI/bin/Temp/_201507220659_Persons.bin
 Web.UI/Content/js/views/Research/FindClues1.js
 Web.UI/Content/js/views/Research/FindCluesReport1.js
+Web.UI/bin/Temp/_201507261619_Persons.bin
+Web.UI/bin/Temp/_201507261620_Persons.bin
