Fix the wrap issue in the table.  And reduce the size of images.

--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -1037,6 +1037,7 @@
     <Content Include="Images\find.png" />
     <Content Include="Images\findagrave.png" />
     <Content Include="Images\FindAGrave1.png" />
+    <Content Include="Images\findmyfamilies_new1-2.png" />
     <Content Include="Images\findmyfamilies_new1-3.png" />
     <Content Include="Images\findmyfamilies_new1-4.png" />
     <Content Include="Images\findmyfamilies_new1.1.png" />
