fixed bugs and changes for razure host

--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -417,7 +417,7 @@
     <Content Include="Content\js\views\Research\findPersonController.js" />
     <Content Include="Content\js\views\Research\researchController.js" />
     <Content Include="Content\js\views\Research\possibleDuplicates.js" />
-    <Content Include="Content\js\views\Research\Hints.js" />
+    <Content Include="Content\js\views\Research\hints.js" />
     <Content Include="Content\js\views\Research\findClues.js" />
     <Content Include="Content\js\views\Research\findCluesController.js" />
     <Content Include="Content\js\lib\constants.js" />
@@ -472,15 +472,15 @@
     <Content Include="Content\js\views\Research\dateProblems.js" />
     <Content Include="Content\js\views\Research\dateProblemsReport.js" />
     <Content Include="Content\js\views\Research\hintsController.js" />
-    <Content Include="Content\js\views\Research\HintsReport.js" />
+    <Content Include="Content\js\views\Research\hintsReport.js" />
     <Content Include="Content\js\views\Research\incompleteOrdinances.js" />
     <Content Include="Content\js\views\Research\IncompleteOrdinancesReport.js" />
     <Content Include="Content\js\views\Research\personUrlOptions.js" />
-    <Content Include="Content\js\views\Research\PlaceProblems.js" />
+    <Content Include="Content\js\views\Research\placeProblems.js" />
     <Content Include="Content\js\views\Research\PlaceProblemsReport.js" />
     <Content Include="Content\js\views\Research\possibleDuplicatesController.js" />
-    <Content Include="Content\js\views\Research\PossibleDuplicatesReport.js" />
-    <Content Include="Content\js\views\Research\ResearchFamily.js" />
+    <Content Include="Content\js\views\Research\possibleDuplicatesReport.js" />
+    <Content Include="Content\js\views\Research\researchFamily.js" />
     <Content Include="Content\js\views\Research\retrieveController.js" />
     <Content Include="Content\js\views\Research\startingPointController.js" />
     <Content Include="Content\js\views\Research\startingPointReport.js" />
