--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "devDependencies": {
     "browser-sync": "^1.5.2",
-    "copy": "0.0.1",
+    "copy": "^0.1.1",
     "del": "^0.1.3",
     "gulp": "^3.9.0",
     "gulp-ftp": "^1.0.3",
@@ -13,7 +13,7 @@
     "gulp-sprite-generator": "^0.2.3",
     "gulp-sprite-glue": "^0.1.1",
     "gulp-util": "^3.0.6",
-    "gulp.spritesmith": "^3.8.2",
+    "gulp.spritesmith": "^4.0.0",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.1",
     "through2": "^2.0.0",
