Fixed the dialog icons on report

--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -292,11 +292,20 @@
     <Content Include="Content\images\HTML-View-Preview.png" />
     <Content Include="Content\images\img1.jpg" />
     <Content Include="Content\images\important.png" />
+    <Content Include="Content\images\index\bg2.jpg" />
+    <Content Include="Content\images\index\bg5.jpg" />
+    <Content Include="Content\images\index\Computer2.png" />
+    <Content Include="Content\images\index\findmyfamiliesbottom.png" />
+    <Content Include="Content\images\index\findmyfamiliestop.png" />
+    <Content Include="Content\images\index\findmyfamilies_new1.png" />
+    <Content Include="Content\images\index\img1.jpg" />
     <Content Include="Content\images\Information-2.png" />
     <Content Include="Content\images\information.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\images\Internet-Download.png" />
+    <Content Include="Content\images\layout\findmyfamiliesbottom.png" />
+    <Content Include="Content\images\layout\findmyfamiliestop.png" />
     <Content Include="Content\images\MyHeritage.png" />
     <Content Include="Content\images\network.png" />
     <Content Include="Content\images\no.png" />
@@ -313,6 +322,66 @@
     <Content Include="Content\images\Reports.png" />
     <Content Include="Content\images\report_magnify.png" />
     <Content Include="Content\images\Research.png" />
+    <Content Include="Content\images\research\about16.png" />
+    <Content Include="Content\images\research\ancestry16.png" />
+    <Content Include="Content\images\research\billiongraves16.png" />
+    <Content Include="Content\images\research\calendar16.png" />
+    <Content Include="Content\images\research\cancel24.png" />
+    <Content Include="Content\images\research\clean24.png" />
+    <Content Include="Content\images\research\close24.png" />
+    <Content Include="Content\images\research\clue16.png" />
+    <Content Include="Content\images\research\clue24.png" />
+    <Content Include="Content\images\research\clue64.png" />
+    <Content Include="Content\images\research\compass16.png" />
+    <Content Include="Content\images\research\compass24.png" />
+    <Content Include="Content\images\research\compass64.png" />
+    <Content Include="Content\images\research\dates24.png" />
+    <Content Include="Content\images\research\dates64.png" />
+    <Content Include="Content\images\research\duplicate16.png" />
+    <Content Include="Content\images\research\duplicates24.png" />
+    <Content Include="Content\images\research\duplicates64.png" />
+    <Content Include="Content\images\research\earth-icon16.png" />
+    <Content Include="Content\images\research\exclamation24.png" />
+    <Content Include="Content\images\research\execute24.png" />
+    <Content Include="Content\images\research\family16.png" />
+    <Content Include="Content\images\research\family24.png" />
+    <Content Include="Content\images\research\family64.png" />
+    <Content Include="Content\images\research\familysearch16.png" />
+    <Content Include="Content\images\research\find64.png" />
+    <Content Include="Content\images\research\findagrave16.png" />
+    <Content Include="Content\images\research\findmyfamilies16.png" />
+    <Content Include="Content\images\research\findmyfamiliesbottom.png" />
+    <Content Include="Content\images\research\findmyfamiliestop.png" />
+    <Content Include="Content\images\research\findmypast16.png" />
+    <Content Include="Content\images\research\google16.png" />
+    <Content Include="Content\images\research\help16.png" />
+    <Content Include="Content\images\research\help24.png" />
+    <Content Include="Content\images\research\hint16.png" />
+    <Content Include="Content\images\research\hint24.png" />
+    <Content Include="Content\images\research\hint64.png" />
+    <Content Include="Content\images\research\information16.png" />
+    <Content Include="Content\images\research\myheritage16.png" />
+    <Content Include="Content\images\research\ok24.png" />
+    <Content Include="Content\images\research\options24.png" />
+    <Content Include="Content\images\research\place24.png" />
+    <Content Include="Content\images\research\place64.png" />
+    <Content Include="Content\images\research\previous24.png" />
+    <Content Include="Content\images\research\puzilla16.png" />
+    <Content Include="Content\images\research\question24.png" />
+    <Content Include="Content\images\research\report24.png" />
+    <Content Include="Content\images\research\reset24.png" />
+    <Content Include="Content\images\research\reset64.png" />
+    <Content Include="Content\images\research\retrieve16.png" />
+    <Content Include="Content\images\research\retrieve24.png" />
+    <Content Include="Content\images\research\retrieve64.png" />
+    <Content Include="Content\images\research\save24.png" />
+    <Content Include="Content\images\research\search16.png" />
+    <Content Include="Content\images\research\search24.png" />
+    <Content Include="Content\images\research\search64.png" />
+    <Content Include="Content\images\research\submit24.png" />
+    <Content Include="Content\images\research\temple24.png" />
+    <Content Include="Content\images\research\temple64.png" />
+    <Content Include="Content\images\research\warning24.png" />
     <Content Include="Content\images\reset.png" />
     <Content Include="Content\images\Reset24.png" />
     <Content Include="Content\images\Reset32.png" />
