--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -411,6 +411,7 @@
     <Content Include="Content\images\Work Sheet-Auto Format.png" />
     <Content Include="Content\images\Work Sheet.png" />
     <Content Include="Content\js\lib\jqueryUiOptions.js" />
+    <Content Include="Content\js\lib\jquery.hoverIntent.min.js" />
     <Content Include="Content\js\vendor\bootstrap-dialog.min.js" />
     <Content Include="Content\js\vendor\formvalidation\formValidation.js" />
     <Content Include="Content\js\vendor\formvalidation\formValidation.min.js" />
