Setting up features dialog

--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -472,10 +472,10 @@
     <Content Include="Content\js\vendor\string.min.js" />
     <Content Include="Content\js\views\Research\dateProblemsController.js" />
     <Content Include="Content\js\views\Research\dateProblemsReportController.js" />
+    <Content Include="Content\js\views\Research\features.js" />
     <Content Include="Content\js\views\Research\feedback.js" />
+    <Content Include="Content\js\views\Research\featuresController.js" />
     <Content Include="Content\js\views\Research\feedbackController.js" />
-    <Content Include="Content\js\views\Research\feedbackReport.js" />
-    <Content Include="Content\js\views\Research\feedbackReportController.js" />
     <Content Include="Content\js\views\Research\hintsReportController.js" />
     <Content Include="Content\js\views\Research\placeProblemsController.js" />
     <Content Include="Content\js\views\Research\incompleteOrdinancesController.js" />
@@ -1447,6 +1447,7 @@
     <Content Include="Views\Research\FindPersonOptions.cshtml" />
     <Content Include="Views\Research\Feedback.cshtml" />
     <Content Include="Views\Research\FeedbackReport.cshtml" />
+    <Content Include="Views\Research\Features.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
