--- a/Web.UI/Web.UI.csproj
+++ b/Web.UI/Web.UI.csproj
@@ -413,6 +413,21 @@
     <Content Include="Content\js\lib\jqueryUiOptions.js" />
     <Content Include="Content\js\lib\jquery.hoverIntent.min.js" />
     <Content Include="Content\js\vendor\bootstrap-dialog.min.js" />
+    <Content Include="Content\js\vendor\fancybox\blank.gif" />
+    <Content Include="Content\js\vendor\fancybox\fancybox_loading%402x.gif" />
+    <Content Include="Content\js\vendor\fancybox\fancybox_loading.gif" />
+    <Content Include="Content\js\vendor\fancybox\fancybox_overlay.png" />
+    <Content Include="Content\js\vendor\fancybox\fancybox_sprite%402x.png" />
+    <Content Include="Content\js\vendor\fancybox\fancybox_sprite.png" />
+    <Content Include="Content\js\vendor\fancybox\helpers\fancybox_buttons.png" />
+    <Content Include="Content\js\vendor\fancybox\helpers\jquery.fancybox-buttons.css" />
+    <Content Include="Content\js\vendor\fancybox\helpers\jquery.fancybox-buttons.js" />
+    <Content Include="Content\js\vendor\fancybox\helpers\jquery.fancybox-media.js" />
+    <Content Include="Content\js\vendor\fancybox\helpers\jquery.fancybox-thumbs.css" />
+    <Content Include="Content\js\vendor\fancybox\helpers\jquery.fancybox-thumbs.js" />
+    <Content Include="Content\js\vendor\fancybox\jquery.fancybox.css" />
+    <Content Include="Content\js\vendor\fancybox\jquery.fancybox.js" />
+    <Content Include="Content\js\vendor\fancybox\jquery.fancybox.pack.js" />
     <Content Include="Content\js\vendor\formvalidation\formValidation.js" />
     <Content Include="Content\js\vendor\formvalidation\formValidation.min.js" />
     <Content Include="Content\js\vendor\formvalidation\formValidation.popular.js" />
